--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,28 +1,22 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Edit Blog Post</title>
-</head>
-<body>
-    <h1>Edit Blog Post</h1>
+<div class="card">
+    <h2 class="card-header">Edit Your Post</h2>
+    <form class="card-body edit-form">
 
-    <form action="/post/{{post._id}}?_method=PUT" method="POST">
-        <label for="title">Title:</label>
-        <input type="text" id="title" name="title" value="{{post.title}}" required>
+      <div class="form-group">
+        <label class="form-label">Title:</label>
+        <input type="text" class="form-input" name="post-title" value="{{post.title}}"/>
+      </div>
 
-        <label for="content">Content:</label>
-        <textarea id="content" name="content" rows="6" required>{{post.content}}</textarea>
+      <div class="form-group">
+        <label class="form-label">Content:</label>
+        <textarea class="form-textarea form-input" name="post-content">{{post.content}}</textarea>
+      </div>
 
-        <label for="date">Date:</label>
-        <input type="date" id="date" name="date" value="{{formatDate post.date}}" required>
+      <div class="form-group">
+        <button type="submit" class="btn btn-primary"><i class="bi bi-pencil"></i>Edit Post</button>
+      </div>
 
-        <button type="submit">Save Changes</button>
     </form>
-
-    <!-- Include Handlebars library -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"></script>
-
-    <!-- Your JavaScript code -->
-    <script src="/public/Javascript/editPost.js"></script>
-</body>
-</html>
+   
+</div>
+<script src="/public/Javascript/edit.js"></script>
