fixed page issue

--- a/views/create.hbs
+++ b/views/create.hbs
@@ -19,7 +19,7 @@
     </div>
 
     <!-- Include your JavaScript file for form validation and functionality (if needed) -->
-    <script src="/public/Javascript/createpost.js"></script>
+    <script src="/Javascript/createpost.js"></script>
 </body>
 </html>
 
