--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,11 +1,5 @@
 {{!-- views/dashboard.handlebars --}}
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Dashboard</title>
-    <!-- Link to your CSS file -->
-    <link rel="stylesheet" href="/public/css/style.css">
-</head>
+
 <body>
     <div class="dashboard-content">
         {{#if blogPosts.length}}
@@ -43,9 +37,9 @@
     </div>
 
     <!-- Include your JavaScript files for dashboard functionality -->
-    <script src="/public/Javascript/edit.js"></script>
-    <script src="/public/Javascript/newpost.js"></script>
-    <script src="/public/Javascript/deletepost.js"></script>
+    <script src="/Javascript/edit.js"></script>
+    <script src="/Javascript/newpost.js"></script>
+    <script src="/Javascript/deletepost.js"></script>
 </body>
 </html>
 
