--- a/views/login.hbs
+++ b/views/login.hbs
@@ -21,11 +21,11 @@
             </div>
             <button type="submit">Login</button>
         </form>
-        <p>Don't have an account? <a href="/views/signup.hbs">Sign up</a></p>
+        <p>Don't have an account? <a href="/signup">Sign up</a></p>
     </div>
 
     <!-- Include your JavaScript file for login functionality -->
-    <script src="/public/Javascript/login.js"></script>
+    <script src="/Javascript/login"></script>
 </body>
 </html>
 
