--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -19,6 +19,6 @@
     </div>
 
    
-    <script src="/public/Javascript/signup.js"></script>
+    <script src="/Javascript/signup"></script>
 </body>
 </html>
