--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,13 +11,18 @@
         <div class="nav">
             <a href="/">Home</a>
             <a href="/dashboard">Dashboard</a>
-            <a href="/login">Login</a>
-            <a href="/signup">Signup</a>
+            {{#if loggedIn}}
+              <a href="/logout">Logout</a>
+            {{else}}
+              <a href="/login">Login</a>
+              <a href="/signup">Signup</a>
+            {{/if}}
         </div>
     </div>
     {{{body}}}
 </body>
 </html>
+
 
 
 
